- update cors config